feat: Se termina la primera entrega del proyecto final de java